# ForAnton

./: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
